# DH3D

./: .gitignore  README.md  train.py
core/: augment.py  backbones.py  configs.py  datasets.py  layers.py  losses.py  model.py  tf_utils.py  utils.py
evaluate/global_eval/: evaluation_retrieval.py  globaldesc_extract.py
evaluate/global_eval/demo_data/: global_query_demo.pickle  global_ref_demo.pickle
evaluate/local_eval/: localdesc_extract.py
evaluate/local_eval/matlab_code/: eval_align.m  local_align_demo.m
evaluate/local_eval/matlab_code/common/: GetEulerAngles.m  Utils.m  read_txt_oxford.m
models/global/: checkpoint  config.json  globalmodel.index
models/local/: checkpoint  config.json  localmodel.index
results_in_paper/: results_in_paper.txt
tf_ops/: Readme.md
tf_ops/grouping/: test.sbatch  tf_grouping.py  tf_grouping_compile.sh  tf_grouping_op_test.py
tf_ops/interpolation/: tf_interpolate_compile.sh  tf_interpolate_op_test.py  visu_interpolation.py
tf_ops/sampling/: tf_sampling.py  tf_sampling_compile.sh
user_ops/: CMakeLists.txt  Readme.md  __init__.py  misc.py  test_all.py  test_conv_pointset.py  test_flex_convolution.py  test_flex_convolution_transpose.py  test_flex_pooling.py  test_knn_bruteforce.py
user_ops/kernels/: conv_pointset_kernel.cc  conv_pointset_kernel_gpu.cu.cc  conv_pointset_op.cc  conv_pointset_op.h  cuda_utils.h  flex_conv_kernel.cc  flex_conv_kernel_gpu.cu.cc  flex_conv_op.cc  flex_conv_op.h  flex_deconv_kernel.cc  flex_deconv_kernel_gpu.cu.cc  flex_deconv_op.cc  flex_deconv_op.h  flex_pool_kernel.cc  flex_pool_kernel_gpu.cu.cc  flex_pool_op.cc  flex_pool_op.h  knn_bruteforce_kernel.cc  knn_bruteforce_kernel_gpu.cu.cc  knn_bruteforce_op.cc  knn_bruteforce_op.h
user_ops/ops/: conv_pointset.cc  flex_conv.cc  flex_deconv.cc  flex_pool.cc  knn_bruteforce.cc
